# ros2_arduino_bldc_motor_controller_bridge

./: README.md  manual_speed_control.py  speed_control_demo.py  test_motor_control.py
arduino_improved/: E38S_ENCODER_README.md  E38S_ENCODER_SETUP.md  E38S_ENCODER_WIRING_GUIDE.md  arduino_improved.ino  e38s_encoder_improved.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/arduino_motor_bridge/: CMakeLists.txt  arduino_diagnostic.sh  debug_motor_control.sh  run_auto_bridge.sh  setup.py  test_hall_sensor.py  test_improved_bridge.sh
src/arduino_motor_bridge/arduino_motor_bridge/: arduino_bridge_node.py  robust_arduino_serial.py  robust_encoder_node.py  test_arduino_commands.py
src/arduino_motor_bridge/launch/: auto_arduino_bridge.launch.py  improved_arduino_bridge.launch.py
src/arduino_motor_bridge/scripts/: arduino_bridge_node.py  test_arduino_commands.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robot_navigation/: README.md  create_complex_map.py  direct_simulation.py  quick_test.sh  restart_and_test_navigation.sh  run_auto_complete_navigation.sh  run_auto_navigation.sh  run_auto_navigation_rviz.sh  run_complex_encoder_navigation.sh  run_complex_map_navigation.sh  run_direct_navigation.sh  run_e38s_navigation.sh  run_improved_navigation.sh  run_nav_with_sensors.sh  run_navigation.sh  run_navigation_sim.sh  run_navigation_with_auto_arduino.sh  run_real_hardware_navigation.sh  run_robust_encoder_navigation.sh  run_simple_map_navigation.py  run_simple_visualization.sh  run_simulation_navigation.sh  (+9 more)
(+70 files in other folders)
